# ExcelAgentTemplate

./: .env.example  .gitignore  LICENSE  README-ja.md  README.md  langchain_fastapi.bat  langchain_fastapi.bat.example  langchain_fastapi.py  pyproject.toml  requirements.txt
.github/workflows/: build-excel-addin.yml
RunAgentClient/: RunAgentClient.sln
RunAgentClient/RunAgentClient/: RunAgent.cs  RunAgentClient-AddIn.dna  RunAgentClient.csproj  packages.config
RunAgentClient/RunAgentClient/Properties/: AssemblyInfo.cs
